cfn_benchmark/cfn_templates/TIBCOSoftware__bpme-samples/aws-cloud-formation-template/templates/bpme-securitygroups.template
#
# Copyright © 2021. TIBCO Software Inc.
# This file is subject to the license terms contained
# in the license file that is distributed with this file.
#
AWSTemplateFormatVersion: 2010-09-09

# ======================================================================================================================
# TEMPLATE : BPM - Security Groups Template (bpme-securitygroups.template)
# ======================================================================================================================
#
# This template creates security groups that control network traffic, both internal and external, to the different
# instances used by the BPM system in the host VPC, according to their function. (Each security group
# acts as a virtual firewall on that instance.)
#
# Security groups are associated with specific services or instances later by other templates usually as part of the
# creation or configuration of that service or instance.
#
# In general:
# - Each security group only opens the ports necessary for inbound communication from other security groups.
# - All outbound ports are fully open.
# - Within a security group all traffic is permitted.
#
# NOTE: You can further restrict inbound or outbound ports on a security group if you wish to do so. However, if you do
# so and susbequently request support for a problem with your BPM system, TIBCO may first require you to
# apply the model defined in this template to establish that the security group configuration is not the root cause of
# the issue.
#

Description: >-
  Creates security groups that control network traffic, both internal and external, to the different instances used by
  the BPM system in the host VPC, according to their function

# ======================================================================================================================
# METADATA :
# ======================================================================================================================
#
# Defines template configuration data
#
Metadata:

  # =====================================================
  # METADATA KEY : AWS::CloudFormation::Interface
  # =====================================================
  #
  # Defines how the input parameters defined in this template will be presented in the AWS CloudFormation console when
  # creating the stack:
  #
  # - ParameterGroups defines how parameters will be grouped and ordered
  # - ParameterLabels defines the label that will be used for each parameter
  #
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: Host VPC Network Configuration
        Parameters:
          - VPCID
      - Label:
          default: Security Configuration
        Parameters:
          - BastionSecurityGroupID
          - RemoteAccessCIDR
    ParameterLabels:
      VPCID:
        default: Host VPC
      BastionSecurityGroupID:
        default: Bastion Security Group ID
      RemoteAccessCIDR:
        default: External Access CIDR

# ======================================================================================================================
# PARAMETERS :
# ======================================================================================================================
#
# Defines the input parameters to be passed to this template when creating a stack
#
Parameters:

  # =====================================================
  # PARAMETER : VPCID
  # =====================================================
  #
  # ID of the VPC that will be used to host the BPM system
  #
  VPCID:
    Description: ID of the VPC that will be used to host the BPM system
    Type: AWS::EC2::VPC::Id

  # =====================================================
  # PARAMETER : BastionSecurityGroupID
  # =====================================================
  #
  # ID of the Bastion security group resource (BastionSecurityGroup) that controls inbound SSH access to the bastion
  # servers in the host VPC
  #
  BastionSecurityGroupID:
    Description: >-
      ID of the Bastion security group that controls inbound SSH access to the bastion servers in the host VPC
    Type: AWS::EC2::SecurityGroup::Id

  # =====================================================
  # PARAMETER : RemoteAccessCIDR
  # =====================================================
  #
  # Classless Inter-Domain Routing (CIDR) block, in x.x.x.x/x format, from which external network access to the
  # BPM system will be allowed.
  #
  # Best practise is to set this value to a trusted CIDR block - for example, to only allow access to BPM
  # from your corporate network. If you want to allow unrestricted access, enter 0.0.0.0/0.
  #
  RemoteAccessCIDR:
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: >-
      CIDR block (in x.x.x.x/x format) from which external network access to the BPM system is allowed
    Type: String

# ======================================================================================================================
# RESOURCES :
# ======================================================================================================================
#
# Declares the AWS security groups to be used in the stack
#
Resources:

  # =====================================================
  # RESOURCE : BPM Load Balancer Security Group (BPMLBSG)
  # =====================================================
  #
  # Controls external access to BPM client applications (Openspace, Workspace, Application Development,
  # custom client applications and Administrator) via the BPM load balancer.
  #
  # Permits:
  #  - HTTP access (on port 80) from the RemoteAccessCIDR block
  #  - HTTPS access (on port 443) from the RemoteAccessCIDR block
  #
  # Associated with: BPM Load Balancer (BPMELB)
  #
  BPMLBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Controls external HTTP and HTTPS access to BPM client applications via the BPM load balancer
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref RemoteAccessCIDR
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref RemoteAccessCIDR
      Tags:
        - Key: Name
          Value: BPM LB SG

  # ================================================================
  # RESOURCE : BPM EC2 Instances Security Group (BPMInstanceSG)
  # ================================================================
  #
  # Controls access to the BPM EC2 instances from within the host VPC
  #
  # Permits:
  #  - SSH access (on port 22) from the bastion servers
  #  - HTTP access (on port 80) from the BPM load balancer
  #
  # Associated with: both BPM EC2 instances (BPMInstance)
  #
  BPMInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Controls SSH and HTTP access to the BPM EC2 instances from within the host VPC
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref BPMLBSG
      Tags:
        - Key: Name
          Value: BPM Inst SG
    DependsOn:
      - BPMLBSG

  # ================================================================================
  # RESOURCE : BPM EC2 Instances Ingress Security Group (BPMInstanceSGIngress)
  # ================================================================================
  #
  # Permits unrestricted traffic between the BPM EC2 instances defined in the BPMInstanceSG security group
  #
  # Permits:
  #  - all access (on all ports) from another BPM EC2 instance in the BPMInstanceSG security group
  #
  BPMInstanceSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: '-1'
      SourceSecurityGroupId: !Ref BPMInstanceSG
      GroupId: !Ref BPMInstanceSG

  # ============================================================
  # RESOURCE : LDAP Load Balancer Security Group (LDAPLBSG)
  # ============================================================
  #
  # Controls external access to the cloud LDAP server via the LDAP load balancer
  #
  # Permits:
  #  - LDAP access (on port 389) from the RemoteAccessCIDR block
  #  - LDAPS access (on port 636) from the RemoteAccessCIDR block
  #
  # Associated with: LDAP load balancer (LDAPLB)
  #
  LDAPLBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Controls external LDAP and LDAPS access to the cloud LDAP server via the LDAP load balancer
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '389'
          ToPort: '389'
          CidrIp: !Ref RemoteAccessCIDR
        - IpProtocol: tcp
          FromPort: '636'
          ToPort: '636'
          CidrIp: !Ref RemoteAccessCIDR
      Tags:
        - Key: Name
          Value: LDAP LB SG

  # ================================================================
  # RESOURCE : LDAP EC2 Instances Security Group (LDAPInstanceSG)
  # ================================================================
  #
  # Controls access to the LDAP EC2 instance(s) from within the host VPC
  #
  # Permits:
  #  - SSH access (on port 22) from the bastion servers
  #  - LDAP access (on port 389) from the BPM EC2 instances
  #  - LDAPS access (on port 636) from the BPM EC2 instances
  #
  # Associated with: LDAP EC2 instance (LDAPInstance)
  #
  LDAPInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Controls SSH, LDAP and LDAPS access to the LDAP EC2 instance(s) from within the host VPC
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        - IpProtocol: tcp
          FromPort: '389'
          ToPort: '389'
          SourceSecurityGroupId: !Ref BPMInstanceSG
        - IpProtocol: tcp
          FromPort: '636'
          ToPort: '636'
          SourceSecurityGroupId: !Ref BPMInstanceSG
        - IpProtocol: tcp
          FromPort: '389'
          ToPort: '389'
          SourceSecurityGroupId: !Ref LDAPLBSG
        - IpProtocol: tcp
          FromPort: '636'
          ToPort: '636'
          SourceSecurityGroupId: !Ref LDAPLBSG
      Tags:
        - Key: Name
          Value: LDAP Inst SG
    DependsOn:
      - BPMInstanceSG
      - LDAPLBSG

  # ================================================================================
  # RESOURCE : LDAP EC2 Instances Ingress Security Group (LDAPInstanceSGIngress)
  # ================================================================================
  #
  # Permits unrestricted traffic between the LDAP EC2 instances defined in the LDAPInstanceSG security group (if any
  # additional LDAP EC2 instances have been defined
  #
  # Permits:
  #  - all access (on all ports) from another LDAP EC2 instance in the LDAPInstanceSG security group
  #
  LDAPInstanceSGIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: '-1'
      SourceSecurityGroupId: !Ref LDAPInstanceSG
      GroupId: !Ref LDAPInstanceSG

  # ================================================================
  # RESOURCE : BPM Postgres RDS Instance Security Group (BPMDBSG)
  # ================================================================
  #
  # Controls access to the BPM Postgres RDS instance from within the host VPC
  #
  # Permits:
  #  - Postgres access (on port 5432) from the bastion servers
  #  - Postgres access (on port 5432) from the BPM EC2 instances
  #
  # Associated with: BPM Postgres RDS instance (BPMDB)
  #
  BPMDBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Controls acccess to the BPM Oracle RDS instance from within the host VPC
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        - IpProtocol: tcp
          FromPort: '5432'
          ToPort: '5432'
          SourceSecurityGroupId: !Ref BPMInstanceSG
      Tags:
        - Key: Name
          Value: BPM DB SG
    DependsOn:
      - BPMInstanceSG

# ======================================================================================================================
# OUTPUTS :
# ======================================================================================================================
#
# Declares the ID of each security group as an output value that can be used as a cross-stack reference
#
Outputs:
  BPMLBSecurityGroupID:
    Value: !Ref BPMLBSG
    Description: BPM Load Balancer Security Group ID

  BPMInstanceSecurityGroupID:
    Value: !Ref BPMInstanceSG
    Description: BPM EC2 Instances Security Group ID

  LDAPLBSecurityGroupID:
    Value: !Ref LDAPLBSG
    Description: LDAP Load Balancer Security Group ID

  LDAPInstanceSecurityGroupID:
    Value: !Ref LDAPInstanceSG
    Description: LDAP EC2 Instances Security Group ID

  BPMDBSecurityGroupID:
    Value: !Ref BPMDBSG
    Description: BPM Oracle RDS Instance Security Group ID
